# OpenCVPeopleDetection

./: CMakeLists.txt  HOG.cpp  HOGCascade.cpp  HogSVM.cpp  README.md  Video.cpp  hog_svm.cpp
harr_cascade_face_detect/: CMakeLists.txt  FindOpenCV.cmake  face_detect_test.cpp
harr_cascade_person/: CMakeLists.txt  person_detect_test.cpp
