cmake_minimum_required(VERSION 2.8)
project( face_detect_test )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( face_detect_test face_detect_test.cpp )
target_link_libraries( face_detect_test ${OpenCV_LIBRARIES} )
